# advanced-juniper-actix

./: .env.example  Cargo.toml
migrations/2021-06-20-051655_users/: up.sql
migrations/2021-06-20-051707_products/: up.sql
src/: db.rs  handlers.rs  main.rs  schema.rs
src/graphql/: mod.rs  product.rs  root.rs  user.rs
