[package]
name = "advanced_juniper_actix"
version = "0.1.0"
authors = ["dakusuno <gareadio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.2", features = ["postgres","r2d2","numeric","uuidv07","bigdecimal"] }
dotenv = "0.15.0"
juniper = "0.15.6"
r2d2 = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bigdecimal = "0.0.14"
env_logger = "0.7.1"
uuid = { version = "0.8", features = ["serde", "v4"] }